--- a/docs/DevOps/监控概述.md
+++ b/docs/DevOps/监控概述.md
@@ -183,13 +183,13 @@ Prometheus 其实也内置实现了一个时序存储模块。
 
    - OpenTSDB
 
-     <img src="./attachments/image-20240625172553829.png" alt="image-20240625172553829" style="zoom:50%;" />
+     ![image-20240625172553829](./attachments/image-20240625172553829.png)
 
    - VictoriaMetrics
 
      不仅能作为时序数据库结合 Prometheus 使用进行指标的长期远程存储，也能单独作为一个监控解决方案对 Prometheus 进行平替
 
-     <img src="./attachments/image-20240625172820618.png" alt="image-20240625172820618" style="zoom:50%;" />
+     ![image-20240625172820618](./attachments/image-20240625172820618.png)
 
 3. 告警引擎从时序库等读取数据做规则判断
 
